@@ -1,5 +1,6 @@
 {{$NEXT}}
     - Added a batch of git check modules
+    - then removed [Git::CheckFor::Fixups] as it gets versioning wrong
 
 0.20      2015-03-19 17:03:00+00:00 Europe/London
     - Force the test modules from previous change to be included
